--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@
 title: Arakoo
 email: hello@patdryburgh.com
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
-baseurl: "/hitchens" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+  Make Java Great Again
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://arakoo.com" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
-twitter_username: patdryburgh
-github_username:  patdryburgh
+twitter_username: sandeepssrin
+github_username:  arakoodev
 
 # Build settings
 markdown: kramdown
