--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: hello@patdryburgh.com
 description: >- # this means to ignore newlines until "baseurl:"
   Make Java Great Again
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://arakoodev.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.arakoo.com" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
 twitter_username: sandeepssrin
 github_username:  arakoodev
