--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Make Java Great Again
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://www.arakoo.com" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
+icon: /assets/images/arakoo-02.png
 twitter_username: sandeepssrin
 github_username:  arakoodev
 
