--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Arakoo / Venil
-email: hello@patdryburgh.com
+title: Arakoo / FlySpring
+email: sss@arakoo.com
 description: >- # this means to ignore newlines until "baseurl:"
   Make Java Great Again
 baseurl: "/" # the subpath of your site, e.g. /blog
